tests/type/errors/bad_arg_shadowing.typedsol
2:5 error: Conflicting declarations
